# pydantigraph

./: .readthedocs.yaml  README.md  pyproject.toml
docs/: conf.py  index.md  model.md  namespace.md  notes.md  property.md
examples/: model_basics.ipynb  test.ttl
pydantigraph/: __init__.py  base.py  model.py  namespace.py  property.py
pyoxigraph_pydantic/: __init__.py  const.py  field.py  model.py  namespace.py  property.py  types.py
tests/: test_model.py  test_namespace.py  test_property.py
