[tool.poetry]
name = "pyoxigraph-pydantic"
version = "0.1.0"
description = "ORM data models, schemas, and vocabularies for pyoxigraph"
authors = ["sneakers-the-rat <sneakers-the-rat@protonmail.com>"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/p2p-ld/pyoxigraph-pydantic"

[tool.poetry.dependencies]
python = "^3.11"
pyoxigraph = "^0.3.22"
pydantic = "^2.5.3"
pytest = {version = "^7.4.4", optional = true}
rdflib = "^7.0.0"
sphinx = {version = "^7.2.6", optional = true}
furo = {version = "^2023.9.10", optional = true}
autodoc-pydantic = {version = "^2.0.1", optional = true}
sphinx-autobuild = {version = "^2021.3.14", optional = true}
sphinx-design = {version = "^0.5.0", optional = true}
myst-parser = {version = "^2.0.0", optional = true}

[tool.poetry.extras]
tests = ["pytest"]
docs = ["sphinx", "furo", "autodoc-pydantic", "sphinx-autobuild", "sphinx-design", "myst-parser"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
